--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Netflix Langing Page</title>
+    <link rel="stylesheet" href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F2772922.png&imgrefurl=https%3A%2F%2Fwallpaperaccess.com%2Fnetflix-logo-hd&tbnid=VlP8UyYH_C5xKM&vet=12ahUKEwiU04379df2AhUHfBoKHWfsBtsQMygHegUIARDbAQ..i&docid=qpTQZ1RZSVhm8M&w=1600&h=900&q=netflix%20img&ved=2ahUKEwiU04379df2AhUHfBoKHWfsBtsQMygHegUIARDbAQ">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
